--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,11 @@ body {
     cursor: pointer;
 }
 
+#secret {
+    display: none;
+}
+
+
 #overlay {
     position: absolute;
     top: 50%;
@@ -28,8 +33,21 @@ body {
     z-index: 1;
     background-color: rgba(255, 255, 255, 0.8);
     padding: 20px;
-
     border-radius: 10px;
+    opacity: 1; /* Initially fully opaque */
+    transition: opacity 0.4s ease; /* Transition for opacity change */
+    text-align: center;
+}
+
+#overlay button{
+    margin-top: 5px;
+    margin-left: auto;
+    margin-right: auto;
+    display:  block;
+}
+
+#overlay.hidden{
+    opacity: 0; /* Fade out by reducing opacity */
 }
 
 #prompt{
